Bug 222667: Add newlines between root-nodes in serializer rather then encoder.

r=peterv sr=jst