content/base/src/nsDocumentEncoder.cpp
@@ -346,15 +346,6 @@ nsDocumentEncoder::SerializeNodeEnd(nsIDOMNode* aNode,
     }
   }
 
-  nsCOMPtr<nsIDOMNode> parent;
-  aNode->GetParentNode(getter_AddRefs(parent));
-  if (parent) {
-    parent->GetNodeType(&type);
-    if (type == nsIDOMNode::DOCUMENT_NODE) {
-        aStr.Append((PRUnichar)'\n');
-    }
-  }
-
   return NS_OK;
 }
 
@@ -929,7 +920,6 @@ nsDocumentEncoder::EncodeToString(nsAString& aOutputString)
     rv = mSerializer->AppendDocumentStart(domdoc, aOutputString);
 
     if (NS_SUCCEEDED(rv)) {
-      aOutputString.Append((PRUnichar)'\n');
       nsCOMPtr<nsIDOMNode> doc(do_QueryInterface(mDocument));
 
       rv = SerializeToStringRecursive(doc, aOutputString);
